buildkernel.8: Update email

--- a/buildkernel.8
+++ b/buildkernel.8
@@ -254,7 +254,7 @@ This is free software, you are free to change and redistribute it.
 There is NO WARRANTY, to the extent permitted by law.
 .fi
 .SH AUTHORS
-TheGreatMcPain \(em send bug reports or comments for this fork to <sixsupersonic@gmail.com>
+TheGreatMcPain \(em send bug reports or comments for this fork to <james@thegreatmcpain.xyz>
 .SH ORIGINAL_AUTHOR
 sakaki \(em send bug reports or comments to <sakaki@deciban.com>
 .SH "SEE ALSO"
